@@ -1,68 +1,58 @@
 package dev.jbang.cli;
 
-import java.io.File;
 import java.io.FileDescriptor;
 import java.io.FileOutputStream;
-import java.io.IOException;
 import java.io.PrintStream;
-import java.util.List;
+import java.nio.file.Path;
 
 import dev.jbang.source.*;
 
 import picocli.CommandLine;
 
-public abstract class BaseBuildCommand extends BaseScriptCommand {
-	protected String javaVersion;
+public abstract class BaseBuildCommand extends BaseCommand {
+
+	@CommandLine.Mixin
+	ScriptMixin scriptMixin;
+
+	@CommandLine.Mixin
+	BuildMixin buildMixin;
 
 	@CommandLine.Mixin
 	DependencyInfoMixin dependencyInfoMixin;
 
-	@CommandLine.Option(names = { "-s", "--sources" }, description = "Add additional sources.")
-	List<String> sources;
-
-	@CommandLine.Option(names = { "-m",
-			"--main" }, description = "Main class to use when running. Used primarily for running jar's.")
-	String main;
-
-	@CommandLine.Option(names = { "-j",
-			"--java" }, description = "JDK version to use for running the script.")
-	void setJavaVersion(String javaVersion) {
-		if (!javaVersion.matches("\\d+[+]?")) {
-			throw new IllegalArgumentException(
-					"Invalid version, should be a number optionally followed by a plus sign");
-		}
-		this.javaVersion = javaVersion;
-	}
+	@CommandLine.Mixin
+	NativeMixin nativeMixin;
 
 	@CommandLine.Option(names = {
-			"-n", "--native" }, description = "Build using native-image")
-	boolean nativeImage;
+			"--build-dir" }, description = "Use given directory for build results")
+	Path buildDir;
 
-	@CommandLine.Option(names = { "--catalog" }, description = "Path to catalog file to be used instead of the default")
-	File catalog;
+	@CommandLine.Option(names = { "--enable-preview" }, description = "Activate Java preview features")
+	Boolean enablePreviewRequested;
 
 	PrintStream out = new PrintStream(new FileOutputStream(FileDescriptor.out));
 
-	static Code buildIfNeeded(Code code, RunContext ctx) throws IOException {
-		if (needsJar(code, ctx)) {
-			SourceSet ss = (SourceSet) code;
-			code = ss.builder(ctx).build();
-		}
-		return code;
-	}
+	protected ProjectBuilder createBaseProjectBuilder() {
+		return Project
+			.builder()
+			.setProperties(dependencyInfoMixin.getProperties())
+			.additionalDependencies(dependencyInfoMixin.getDependencies())
+			.additionalRepositories(dependencyInfoMixin.getRepositories())
+			.additionalClasspaths(dependencyInfoMixin.getClasspaths())
+			.additionalSources(scriptMixin.sources)
+			.additionalResources(scriptMixin.resources)
+			.forceType(scriptMixin.forceType)
+			.catalog(scriptMixin.catalog)
+			.javaVersion(buildMixin.javaVersion)
+			.moduleName(buildMixin.module)
+			.compileOptions(buildMixin.compileOptions)
+			.manifestOptions(buildMixin.manifestOptions)
+			.nativeImage(nativeMixin.nativeImage)
+			.nativeOptions(nativeMixin.nativeOptions)
+			.integrations(buildMixin.integrations)
+			.enablePreview(enablePreviewRequested)
+			.jdkManager(buildMixin.jdkProvidersMixin.getJdkManager());
 
-	RunContext getRunContext() {
-		RunContext ctx = new RunContext();
-		ctx.setProperties(dependencyInfoMixin.getProperties());
-		ctx.setAdditionalDependencies(dependencyInfoMixin.getDependencies());
-		ctx.setAdditionalRepositories(dependencyInfoMixin.getRepositories());
-		ctx.setAdditionalClasspaths(dependencyInfoMixin.getClasspaths());
-		ctx.setAdditionalSources(sources);
-		ctx.setForceJsh(forcejsh);
-		ctx.setJavaVersion(javaVersion);
-		ctx.setMainClass(main);
-		ctx.setNativeImage(nativeImage);
-		ctx.setCatalog(catalog);
-		return ctx;
+		// NB: Do not put `.mainClass(buildMixin.main)` here
 	}
 }
