@@ -1,56 +1,73 @@
 package dev.jbang.source.generators;
 
-import java.io.File;
 import java.io.IOException;
-import java.util.*;
+import java.nio.file.Files;
+import java.nio.file.Path;
+import java.util.ArrayList;
+import java.util.Collection;
+import java.util.Collections;
+import java.util.List;
+import java.util.Map;
+import java.util.Optional;
 import java.util.stream.Collectors;
 
 import org.apache.commons.text.StringEscapeUtils;
 
-import dev.jbang.Settings;
-import dev.jbang.source.Code;
-import dev.jbang.source.RunContext;
-import dev.jbang.source.Source;
-import dev.jbang.source.SourceSet;
+import dev.jbang.devkitman.Jdk;
+import dev.jbang.source.*;
 import dev.jbang.util.JavaUtil;
 import dev.jbang.util.Util;
 
-public class JshCmdGenerator extends BaseCmdGenerator {
-	protected final SourceSet ss;
+public class JshCmdGenerator extends BaseCmdGenerator<JshCmdGenerator> {
+	private List<String> runtimeOptions = Collections.emptyList();
+	private boolean interactive;
+	private String mainClass;
 
-	public JshCmdGenerator(SourceSet ss, RunContext ctx) {
-		super(ctx);
-		this.ss = ss;
+	public JshCmdGenerator runtimeOptions(List<String> runtimeOptions) {
+		if (runtimeOptions != null) {
+			this.runtimeOptions = runtimeOptions;
+		} else {
+			this.runtimeOptions = Collections.emptyList();
+		}
+		return this;
 	}
 
-	@Override
-	protected Code getCode() {
-		return ss;
+	public JshCmdGenerator interactive(boolean interactive) {
+		this.interactive = interactive;
+		return this;
+	}
+
+	public JshCmdGenerator mainClass(String mainClass) {
+		this.mainClass = mainClass;
+		return this;
+	}
+
+	public JshCmdGenerator(BuildContext ctx) {
+		super(ctx);
 	}
 
 	@Override
 	protected List<String> generateCommandLineList() throws IOException {
 		List<String> fullArgs = new ArrayList<>();
 
-		String classpath = ctx.resolveClassPath(ss);
+		Project project = ctx.getProject();
+		String classpath = ctx.resolveClassPath().getClassPath();
 
 		List<String> optionalArgs = new ArrayList<>();
 
-		String requestedJavaVersion = ctx.getJavaVersion() != null ? ctx.getJavaVersion()
-				: ss.getJavaVersion().orElse(null);
-		String javacmd;
-		javacmd = JavaUtil.resolveInJavaHome("jshell", requestedJavaVersion);
-
-		if (ss.getJarFile() != null && ss.getJarFile().exists()) {
-			if (Util.isBlankString(classpath)) {
-				classpath = ss.getJarFile().getAbsolutePath();
-			} else {
-				classpath = ss.getJarFile().getAbsolutePath() + Settings.CP_SEPARATOR + classpath.trim();
-			}
-		}
+		Jdk jdk = project.projectJdk();
+		String javacmd = JavaUtil.resolveInJavaHome("jshell", jdk);
 
 		// NB: See https://github.com/jbangdev/jbang/issues/992 for the reasons why we
 		// use the -J flags below
+
+		if (project.enablePreview()) {
+			// jshell does not seem to automaticall pass enable-preview to runtime/compiler
+			optionalArgs.add("--enable-preview");
+			// only required because --execution=local cause it to break otherwise.
+			optionalArgs.add("-J--enable-preview");
+			optionalArgs.add("-C--enable-preview");
+		}
 
 		optionalArgs.add("--execution=local");
 		optionalArgs.add("-J--add-modules=ALL-SYSTEM");
@@ -62,7 +79,8 @@ public class JshCmdGenerator extends BaseCmdGenerator {
 
 		optionalArgs.add("--startup=DEFAULT");
 
-		File tempFile = File.createTempFile("jbang_arguments_", ss.getResourceRef().getFile().getName());
+		Path tempFile = Files.createTempFile("jbang_arguments_",
+				project.getResourceRef().getFile().getFileName().toString());
 
 		String defaultImports = "import java.lang.*;\n" +
 				"import java.util.*;\n" +
@@ -70,45 +88,48 @@ public class JshCmdGenerator extends BaseCmdGenerator {
 				"import java.net.*;" +
 				"import java.math.BigInteger;\n" +
 				"import java.math.BigDecimal;\n";
-		Util.writeString(tempFile.toPath(),
-				defaultImports + generateArgs(ctx.getArguments(), ctx.getProperties()) +
+		String main = Optional.ofNullable(mainClass).orElse(project.getMainClass());
+		Util.writeString(tempFile,
+				defaultImports + generateArgs(arguments, project.getProperties()) +
 						generateStdInputHelper() +
-						generateMain(ctx.getMainClass()));
-		if (ctx.getMainClass() != null) {
-			if (!ctx.getMainClass().contains(".")) {
-				Util.warnMsg("Main class `" + ctx.getMainClass()
+						generateMain(main));
+		if (main != null) {
+			if (!main.contains(".")) {
+				Util.warnMsg("Main class `" + main
 						+ "` is in the default package which JShell unfortunately does not support. You can still use JShell to explore the JDK and any dependencies available on the classpath.");
 			} else {
-				Util.infoMsg("You can run the main class `" + ctx.getMainClass() + "` using: userMain(args)");
+				Util.infoMsg("You can run the main class `" + main + "` using: userMain(args)");
 			}
 		}
-		optionalArgs.add("--startup=" + tempFile.getAbsolutePath());
+		optionalArgs.add("--startup=" + tempFile.toAbsolutePath());
 
-		if (ctx.isDebugEnabled()) {
+		if (debugString != null) {
 			Util.warnMsg("debug not possible when running via jshell.");
 		}
-		if (ctx.isFlightRecordingEnabled()) {
+		if (flightRecorderString != null) {
 			Util.warnMsg("Java Flight Recording not possible when running via jshell.");
 		}
 
 		fullArgs.add(javacmd);
-		addAgentsArgs(fullArgs);
 
-		fullArgs.addAll(jshellOpts(ctx.getRuntimeOptionsMerged(ss)));
-		fullArgs.addAll(jshellOpts(ctx.getAutoDetectedModuleArguments(ss, requestedJavaVersion)));
+		fullArgs.addAll(jshellOpts(project.getRuntimeOptions()));
+		fullArgs.addAll(jshellOpts(runtimeOptions));
+		fullArgs.addAll(ctx.resolveClassPath()
+			.getAutoDectectedModuleArguments(jdk));
 		fullArgs.addAll(optionalArgs);
 
-		if (ss.isJShell() || ctx.isForceJsh()) {
-			ArrayList<Source> revSources = new ArrayList<>(ss.getSources());
+		if (project.isJShell()) {
+			ArrayList<ResourceRef> revSources = new ArrayList<>(project.getMainSourceSet().getSources());
 			Collections.reverse(revSources);
-			for (Source s : revSources) {
-				fullArgs.add(s.getResourceRef().getFile().toString());
+			for (ResourceRef s : revSources) {
+				fullArgs.add(s.getFile().toString());
 			}
 		}
 
-		if (!ctx.isInteractive()) {
-			File exitFile = File.createTempFile("jbang_exit_", ss.getResourceRef().getFile().getName());
-			Util.writeString(exitFile.toPath(), "/exit");
+		if (!interactive) {
+			Path exitFile = Files.createTempFile("jbang_exit_",
+					project.getResourceRef().getFile().getFileName().toString());
+			Util.writeString(exitFile, "/exit");
 			fullArgs.add(exitFile.toString());
 		}
 
@@ -128,10 +149,10 @@ public class JshCmdGenerator extends BaseCmdGenerator {
 				+
 				" }" +
 				(properties.isEmpty() ? "" : "\n") +
-				properties	.entrySet()
-							.stream()
-							.map(x -> "System.setProperty(\"" + x.getKey() + "\",\"" + x.getValue() + "\");")
-							.collect(Collectors.joining("\n"));
+				properties.entrySet()
+					.stream()
+					.map(x -> "System.setProperty(\"" + x.getKey() + "\",\"" + x.getValue() + "\");")
+					.collect(Collectors.joining("\n"));
 		return buf;
 	}
 
